Tt update wallet config (#118)
* added windows specific options to the pom

* MS: Created a WIP launcher using update4j

* MS: Made a launcher service in janus

* MS: providing the service to update4j

* MS: Added a way for the launcher to start the wallet

* MS: Added update4j as dependency

* MS: Started work on update check in the wallet

* MS: fixed conflicts

* MS: started work on thread for restart of application

* MS: added a class for github jason. app restart on update detected. download new bootstrap when a new version exist

* misc

* MS: checkstyle cleanup

* misc

* MS: started adding a tray icon

* Change update bootstrap config

Fetch dependencies from maven project and create config.xml file by OS

* add test for bootstrap

* Change to create 6 config files, for all 3 OS for both nontesting and testing

* Add update config to parent

* Move codes into try{} to catch the exceptions, to not stop the build

* Fix gitignore to point to the right config files

* downgrade maven resolver

* Change to run when doing mvn install, validate and package

* MS: repairing pom for test

* misc

* MS: Changes in modul info and pom

* misc

* remove openjfx-swing, remove modulepath for daemon on config file, change download config folder

* missing + on version

* ms: chenges in pom

* fix wrong version on swing

* indentation

* Add option to add exports and opens to the config file

* catch empty array

* change to use config/config.xml on local if no config found

* update git ignore

* config: forced modulepath to lowercase and added another conflict to ignore in the configs.

Co-authored-by: Fim-84 <marcus.stenberg@gmail.com>
Co-authored-by: dekm <gevan73@gmail.com>